# spimex-fastapi

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2024_09_24_1511-d815f58f5d4f_create_spimextradingresults.py
src/: config.py  main.py
src/api/: __init__.py
src/api/routers/: __init__.py  spimex_trading.py
src/api/v1/routers/: __init__.py  dependensies.py  spimex_trading.py
src/database/: __init__.py  db.py
src/models/: __init__.py  spimexs_trading.py
src/repositories/: __init__.py  spimex_trading.py
src/schemas/: __init__.py  filter.py  spimex_trading.py
src/utils/: celery.py  custom_types.py  redis.py  repository.py
tests/: conftest.py  fake_data.py
tests/api/: test_routers.py
tests/unit/: test_repository.py  test_spimex_trading.py
